// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple stores Performs multi store management 1`] = `
<div>
  <input
    data-testid="email"
    type="email"
    value=""
  />
  <input
    data-testid="password"
    type="password"
    value=""
  />
  <button
    data-testid="reset"
    type="button"
  />
</div>
`;

exports[`Multiple stores Performs multi store management 2`] = `
<div>
  <input
    data-testid="email"
    type="email"
    value="john-doe@gmail.com"
  />
  <input
    data-testid="password"
    type="password"
    value=""
  />
  <button
    data-testid="reset"
    type="button"
  />
</div>
`;

exports[`Multiple stores Performs multi store management 3`] = `
<div>
  <input
    data-testid="email"
    type="email"
    value="john-doe@gmail.com"
  />
  <input
    data-testid="password"
    type="password"
    value="qwerty"
  />
  <button
    data-testid="reset"
    type="button"
  />
</div>
`;

exports[`Multiple stores Performs multi store management 4`] = `
<div>
  <input
    data-testid="email"
    type="email"
    value="admin@gmail.com"
  />
  <input
    data-testid="password"
    type="password"
    value="admin"
  />
  <button
    data-testid="reset"
    type="button"
  />
</div>
`;

exports[`Multiple stores Performs multi store management 5`] = `
<div>
  <input
    data-testid="email"
    type="email"
    value=""
  />
  <input
    data-testid="password"
    type="password"
    value=""
  />
  <button
    data-testid="reset"
    type="button"
  />
</div>
`;

exports[`Single store Multiple Setters / Getters 1`] = `
Array [
  <span
    data-testid="getter"
  >
    0
  </span>,
  <span
    data-testid="getter"
  >
    0
  </span>,
]
`;

exports[`Single store Multiple Setters / Getters 2`] = `
Array [
  <span
    data-testid="getter"
  >
    1
  </span>,
  <span
    data-testid="getter"
  >
    1
  </span>,
]
`;

exports[`Single store Multiple Setters / Getters 3`] = `
Array [
  <span
    data-testid="getter"
  >
    2
  </span>,
  <span
    data-testid="getter"
  >
    2
  </span>,
]
`;

exports[`Single store Multiple Setters / Getters 4`] = `
Array [
  <span
    data-testid="getter"
  >
    3
  </span>,
  <span
    data-testid="getter"
  >
    3
  </span>,
]
`;
